--- a/devops.html
+++ b/devops.html
@@ -84,6 +84,10 @@
         <div class="article-section">
             <img src="media/imagen38.svg" alt="Terraform" class="article-image">
             <h2><a href="devops/terraform.html">Terraform</a></h2>
+        </div>
+        <div class="article-section">
+            <img src="media/imagen38.svg" alt="Flink" class="article-image">
+            <h2><a href="devops/flink.html">Flink</a></h2>
         </div> 
         <!-- Nuevo artículo -->
         <div class="article-section">
