--- a/devops.html
+++ b/devops.html
@@ -89,6 +89,10 @@
             <img src="media/imagen38.svg" alt="Flink" class="article-image">
             <h2><a href="devops/flink.html">Flink</a></h2>
         </div> 
+        <div class="article-section">
+            <img src="media/imagen38.svg" alt="Airflow" class="article-image">
+            <h2><a href="devops/airflow.html">Airflow</a></h2>
+        </div> 
         <!-- Nuevo artículo -->
         <div class="article-section">
             <img src="media/imagen38.svg" alt="En proceso" class="article-image">
