--- a/devops/airflow.html
+++ b/devops/airflow.html
@@ -253,7 +253,7 @@ flujo_dag = flujo()
                 <div class="blog-image-grande">
                     <img src="media/airflow14.jpeg" alt="">
                 </div>
-                <h2>Proyecto Básico en Linux</h2>
+                <h2>Proyecto con Docker Compose en Linux</h2>
                 <div class="contenedor">
                     <div class="etiqueta">
                         Creación de un entorno virtual:
