--- a/devops/airflow.html
+++ b/devops/airflow.html
@@ -385,13 +385,13 @@ services:
                 </div>
             </div>
             <div class="contenedor">
-                <div class="etiqueta">Interfaz web de Airflow:</div>
+                <div class="etiqueta">Interfaz web de pgAdmin:</div>
                 <div class="comandos">
                     <input type="text" class="text" value="http://localhost:5050/" oninput="ajustarancho(this)">
                     <button><i class="fa fa-clone"></i><span> copy</span></button>
                 </div>
             </div>
-            <p>La contraseña predeterminada para el usuario admin@admin.com en la base de datos pgAdmin es root.</p>
+            <p>La contraseña predeterminada para el usuario admin@admin.com en el panel de login de la base de datos pgAdmin es root.</p>
             <div class="blog-image-grande">
                 <img src="media/airflow16.png" alt="">
             </div>
@@ -468,15 +468,16 @@ e94074a424a0  docker.io/apache/airflow:3.0.1        dag-processor         9 minu
                     </div>
                 </section>
             </div>
-            <p>Añadir un nuevo servidor con los siguientes valores: en Name, poner 'ps_db'. En la sección de Connections, colocar la IP en el campo Hostname, y 'airflow' en Username y Password. Por último, hacer clic en Save.</p>
+            <p>Se tiene que añadir un nuevo servidor con los siguientes valores: en Name, poner 'ps_db'. En la sección de Connections, colocar la IP en el campo Hostname, y 'airflow' en Username y Password. Por último, hacer clic en Save.</p>
             <div class="blog-image-zoom">
                 <img src="media/airflow17.png" alt="">
             </div>
-            <p>Crea una base de datos haciendo clic derecho sobre "Databases" y simplemente establece el nombre 'amazon_books'.</p>
+            <p>El proyecto requiere una base de datos para almacenar la información extraída de productos de la web de Amazon. Para crearla, haz clic derecho sobre "Databases" y establece el nombre 'amazon_books'.</p>
             <p>En la sección de "Admin" y luego en "Connections", crea una nueva conexión con los siguientes valores:</p>
             <div class="blog-image-zoom">
                 <img src="media/airflow18.png" alt="">
             </div>
+            <p>Este proyecto de Airflow automatiza la extracción de información de libros de ingeniería de datos desde la página de resultados de búsqueda de Amazon. Utiliza Python para realizar el scraping web, parseando el HTML con BeautifulSoup para extraer títulos, autores, precios y calificaciones. Los datos extraídos se almacenan temporalmente utilizando XComs y luego se insertan en una base de datos PostgreSQL. El flujo de trabajo incluye la creación de la tabla en PostgreSQL (si no existe), la obtención de los datos de Amazon y la posterior inserción de estos datos en la tabla, todo orquestado por Airflow de forma diaria.</p>
             <p>⌭ Crea un script llamado dag.py en la carpeta dags y modifica la fecha.</p>
             <div class="archivo">
 from datetime import datetime, timedelta
@@ -620,8 +621,8 @@ insert_book_data_task = PythonOperator(
 
 fetch_book_data_task >> create_table_task >> insert_book_data_task
             </div>
-            <p>En la sección de DAGs buscar por el DAG llamado fetch_and_store_amazon_book; una vez dentro, dar clic en el botón de "Play" para ejecutar la tarea.</p>
-            <p>Ve a pgAdmin para verificar los datos obtenidos de Amazon. Haz clic derecho en "Tables" y selecciona "Query Tool".</p>
+            <p>En la sección de DAGs, localiza y ejecuta el DAG denominado fetch_and_store_amazon_books haciendo clic en el botón de "Play".</p>
+            <p>Posteriormente, dirígete a pgAdmin para verificar los datos recopilados de Amazon. Para ello, haz clic derecho sobre la sección "Tables" y selecciona la opción "Query Tool".</p>
             <div class="blog-image-zoom">
                 <img src="media/airflow19.png" alt="">
             </div>
