--- a/devops/elk.html
+++ b/devops/elk.html
@@ -1185,7 +1185,7 @@ xpack.encryptedSavedObjects.encryptionKey: "una_clave_de_32_números_aleatorios"
 output {
     elasticsearch {
         hosts => ["http://localhost:9200"]
-        index => "logs"
+        index => "logs-ubuntu"
     }
 }  
                 </div>
