--- a/devops/elk.html
+++ b/devops/elk.html
@@ -77,7 +77,8 @@
                 <div class="blog-image-grande">
                     <img src="media/elk4.png" alt="">
                 </div>
-                <h2>Instalar Elasticsearch</h2>
+                <h2>Elasticsearch</h2>
+                <h6>Instalación</h6>
                 <p>❏ Puedes instalar Elasticsearch desde los repositorios de Elastic.</p>
                 <div class="contenedor">
                     <div class="etiqueta">
@@ -696,7 +697,7 @@ CGroup: /system.slice/elasticsearch.service
                         <li>⌭ <marcador class="resaltado5">base64: </marcador>Codifica o decodifica datos en formato Base64.</li>
                     </ul>
                 </ol>
-                <h2>Instalar Logstash</h2>
+                <h6>Instalación</h6>
                 <p>❏ Puedes descargar Logstash para Windows desde la web oficial de <a href="https://www.elastic.co/downloads/logstash" target="blank">Elastic</a>.</p>
                 <div class="contenedor">
                     <div class="etiqueta">
@@ -1096,7 +1097,8 @@ output {
                     <div class="blog-image-grande">
                         <img src="media/elk7.png" alt="">
                     </div>
-                <h2>Instalar Kibana</h2>
+                <h2>Kibana</h2>
+                <h6>Instalación</h6>
                 <p>❏ Puedes descargar Kibana para Windows desde la web oficial de <a href="https://www.elastic.co/downloads/kibana" target="blank">Elastic</a>.</p>
                 <div class="contenedor">
                     <div class="etiqueta">
