--- a/index.html
+++ b/index.html
@@ -15,25 +15,34 @@
     <header>
         <div class="container__header">
             <div class="logo">
-                <img src="media/logo-1.png" alt="">
+                <img src="../media/logo-4.png" alt="">
             </div>
 
             <div class="menu">
                 <nav>
                     <ul>
-                        <li><a href="index.html">Inicio</a></li>
-                        <li><a href="electronica.html">Electrónica</a></li>
-                        <li><a href="network.html">Networking</a></li>
-                        <li><a href="ia.html">Inteligencia Artificial</a></li>
-                        <li><a href="hacking.html">Ciberseguridad</a></li>
+                        <li><a href="../index.html">Inicio</a></li>
+                        <li><a href="../electronica.html">Electrónica</a></li>
+                        <li><a href="../network.html">Networking</a></li>
+                        <li><a href="../ia.html">Inteligencia Artificial</a></li>
+                        <li><a href="../hacking.html">Ciberseguridad</a></li>
                         <li><a href="../devops.html">DevOps</a></li>
                     </ul>
                 </nav>
             </div>
-            <i class="fa-solid fa-bars" id="icon_menu"></i>
-            <div class="header__botonMenu">
-                <input type="button" class="btn__header-botonMenu" value="Aportar" onclick="window.open('https://buymeacoffee.com/ryuzak1', '_blank');">            </div>
+            
+            <div class="header-icons">
+            <a href="https://github.com/Detective-Ryuzak1" target="_blank"><img src="../media/icon2.png" alt="github"></a>
+            <a href="https://www.youtube.com/@Ryuzak1-z8p" target="_blank"><img src="../media/icon3.png" alt="youtube"></a>
+            <a href="https://www.linkedin.com/in/c%C3%A9sar-augusto-flores-razo-b11863208/" target="_blank"><img src="../media/icon4.png" alt="linkedin"></a>
+            <a href="https://buymeacoffee.com/ryuzak1" target="_blank"><img src="../media/icon1.png" alt="coffee"></a>
             </div>
+
+            <i class="fa-solid fa-bars" style="color: #ffffff;" id="icon_menu"></i>
+            <div class="header__botonMenu">
+                <input type="button" class="btn__header-botonMenu" value="Bonus" onclick="window.open('https://checkio.org/', '_blank');">
+            </div>
+        </div>
     </header>
     <main>
         <div class="cover">
@@ -48,7 +57,7 @@
                 <p>La inteligencia artificial ha dado paso a un nuevo horizonte de posibilidades. Desde los sistemas de aprendizaje automático hasta los algoritmos de procesamiento de lenguaje natural, en este blog exploraremos cómo la IA está cambiando nuestras vidas. Examinaremos casos de uso emocionantes, desde la automatización de tareas hasta la toma de decisiones basada en datos, y discutiremos las implicaciones éticas y sociales de esta revolución tecnológica.</p>
                 <p>Prepárate para sumergirte en un mundo de conocimiento y descubrimiento mientras desentrañamos los misterios de la tecnología. ¡Acompáñame en esta emocionante travesía y desbloqueemos juntos las maravillas de los sistemas computacionales!</p>
                 <div class="buttons__cover">
-                    <input type="button" class="btn__Whoami-cover" value="Aportar" onclick="window.open('https://buymeacoffee.com/ryuzak1', '_blank');">
+                    <input type="button" class="btn__Whoami-cover" value="Bonus" onclick="window.open('https://checkio.org/', '_blank');">
                     <input type="button" class="btn__readMore-cover" value="Leer Más">
                 </div>
             </div>
