--- a/hacking/linux.html
+++ b/hacking/linux.html
@@ -14,7 +14,7 @@
     <header>
         <div class="container__header">
             <div class="logo">
-                <img src="../media/logo-1.png" alt="">
+                <img src="../media/logo-4.png" alt="">
             </div>
 
             <div class="menu">
@@ -31,7 +31,7 @@
             </div>
             <i class="fa-solid fa-bars" style="color: #ffffff;" id="icon_menu"></i>
             <div class="header__botonMenu">
-              <input type="button" class="btn__header-botonMenu" value="Aportar" onclick="window.open('https://buymeacoffee.com/ryuzak1', '_blank');">
+              <input type="button" class="btn__header-botonMenu" value="Bonus" onclick="window.open('https://checkio.org/', '_blank');">
             </div>
         </div>
     </header>
