--- a/hacking/windows.html
+++ b/hacking/windows.html
@@ -29,6 +29,14 @@
                     </ul>
                 </nav>
             </div>
+
+            <div class="header-icons">
+            <a href="https://github.com/Detective-Ryuzak1" target="_blank"><img src="../media/icon2.png" alt="github"></a>
+            <a href="https://www.youtube.com/@Ryuzak1-z8p" target="_blank"><img src="../media/icon3.png" alt="youtube"></a>
+            <a href="https://www.linkedin.com/in/c%C3%A9sar-augusto-flores-razo-b11863208/" target="_blank"><img src="../media/icon4.png" alt="linkedin"></a>
+            <a href="https://buymeacoffee.com/ryuzak1" target="_blank"><img src="../media/icon1.png" alt="coffee"></a>
+            </div>
+
             <i class="fa-solid fa-bars" style="color: #ffffff;" id="icon_menu"></i>
             <div class="header__botonMenu">
               <input type="button" class="btn__header-botonMenu" value="Bonus" onclick="window.open('https://checkio.org/', '_blank');">
