--- a/ia/conceptos.html
+++ b/ia/conceptos.html
@@ -105,7 +105,7 @@
                 </ul>
                 <p>La función de pérdida (Loss Function) es una medida específica que cuantifica la discrepancia entre las predicciones y los valores reales, y se utiliza para ajustar los parámetros del modelo durante el entrenamiento. La Función de Error (Error Function), por otro lado, se refiere más ampliamente a cualquier métrica que evalúa el rendimiento general del modelo. Ambas son esenciales para evaluar y mejorar la eficacia de los modelos de aprendizaje automático y Deep Learning.</p>
                 <p>La función de pérdida es como un juez que evalúa cuán cerca estás de tu objetivo en un juego. El juego podría ser predecir el precio de una casa en función de su tamaño y ubicación. La función de pérdida mide cuánto te desvías del precio real, y la función de error es la suma total de esas desviaciones.</p>
-                <div class="blog-image-zoom">
+                <div class="blog-image-grande">
                     <img src="media/concepto6.png" alt="">
                 </div>
                 <h2>Selección de Características y Reducción de Dimensiones</h2>
