--- a/ia/algoritmos.html
+++ b/ia/algoritmos.html
@@ -238,7 +238,7 @@
                     <li><marcador class="resaltado9">Clasificación por Agrupamiento (Clustering)</marcador></li>
                     <p>La clasificación por agrupamiento es un término general para los algoritmos que dividen los datos en grupos o clústeres similares. Incluye algoritmos como K-Means y DBSCAN.</p>
                     <p>🖍️ <marcador class="resaltado5">Ejemplo:</marcador> Supongamos que tenemos un conjunto de datos con información sobre diferentes tipos de flores y queremos agruparlas en diferentes categorías según sus características. Utilizamos un algoritmo de clasificación por agrupamiento para dividir las flores en diferentes grupos con características similares.</p>
-                    <div class="blog-image-zoom">
+                    <div class="blog-image-grande">
                         <img src="media/algoritmo15.png" alt="">
                     </div> 
                     <li><marcador class="resaltado9">Algoritmos Genéticos</marcador></li>
@@ -258,7 +258,7 @@
                     <p>Los Algoritmos Genéticos son muy versátiles y se utilizan para resolver una amplia gama de problemas de optimización, como encontrar la mejor ruta en un problema de viajante de comercio, diseñar estructuras, optimizar parámetros de modelos matemáticos y mucho más.</p>
                     <p>Los Algoritmos Genéticos son una técnica de búsqueda y optimización basada en la teoría de la evolución. Generan soluciones candidatas a partir de una población inicial, seleccionan y reproducen las mejores soluciones, y aplican mutaciones para explorar y mejorar progresivamente las soluciones. Son útiles para encontrar soluciones cercanas a la óptima en problemas complejos y difíciles de resolver con métodos tradicionales.</p>
                     <p>🖍️ <marcador class="resaltado5">Ejemplo:</marcador> Supongamos que queremos encontrar la mejor ruta para entregar paquetes a diferentes ubicaciones. Utilizamos algoritmos genéticos para generar posibles soluciones (rutas) y luego seleccionamos, cruzamos y mutamos las mejores soluciones hasta encontrar una ruta óptima.</p>
-                    <div class="blog-image-zoom">
+                    <div class="blog-image-grande">
                         <img src="media/algoritmo16.png" alt="">
                     </div> 
                     <li><marcador class="resaltado9">Aprendizaje por Refuerzo (Reinforcement Learning)</marcador></li>
