--- a/hacking/anonimato.html
+++ b/hacking/anonimato.html
@@ -294,7 +294,7 @@ socks5          127.0.0.1 1080
                 <p>Una vez que la conexión se haya establecido correctamente, verás un mensaje que indica que estás conectado. También puedes verificar tu dirección IP para asegurarte de que estás navegando a través de la VPN.</p>
                 <h6>Cambiador y Gestor de User Agent</h6>
                 <p>Cambiar tu User Agent en tu navegador es otra técnica que puedes usar para ocultar tu identidad. Herramientas como User-Agent Switcher and Manager te permiten modificar esta información, lo que puede confundir a los sitios web que intentan identificar tu navegador y sistema operativo.</p>
-                <div class="blog-image-zoom">
+                <div class="blog-image-grande">
                     <img src="media/anonimato5.jpg" alt="">
                 </div>
                 <h6>Navegadores Privados y VPNs</h6>
