--- a/hacking/owasp.html
+++ b/hacking/owasp.html
@@ -64,7 +64,7 @@
                 </ol>
                 <br>
                 <p>El OWASP Top 10 es una valiosa guía para identificar y abordar las vulnerabilidades más críticas en aplicaciones web. La conciencia de estas amenazas es fundamental para el desarrollo y mantenimiento seguro de aplicaciones web. Al tomar medidas para protegerse contra estas vulnerabilidades, las organizaciones pueden proteger sus datos y garantizar una experiencia segura para los usuarios en el siempre cambiante mundo de la ciberseguridad.</p>
-                <div class="blog-image-zoom">
+                <div class="blog-image-grande">
                     <img src="media/owasp1.png" alt="">
                 </div>
                 <h2>Vulnerabilidades del pasado</h2>
@@ -80,7 +80,7 @@
                     <li><marcador class="resaltado2">Server-Side Template Injection (SSTI):</marcador> En esta vulnerabilidad, un atacante puede inyectar código malicioso en una plantilla del servidor que se utiliza para generar contenido dinámico. Si el servidor evalúa la entrada del atacante como parte del código de la plantilla, podría ejecutar código no deseado y comprometer el sistema.</li>
                     <li><marcador class="resaltado2">Falla en Configuración de Seguridad de HTTP (HTTP Security Configuration Failure):</marcador> Esta vulnerabilidad se centra en la falta de configuración segura de encabezados HTTP, lo que puede permitir ataques de Cross-Site Scripting (XSS) y Clickjacking.</li>
                 </ul>
-                <div class="blog-image-zoom">
+                <div class="blog-image-grande">
                     <img src="media/owasp2.jpg" alt="">
                 </div>
                 <h2>Puntos importantes</h2>               
