--- a/network/https.html
+++ b/network/https.html
@@ -59,7 +59,7 @@
                     <li><marcador class="resaltado9">¡Intercambiamos Llaves!:</marcador> Tanto el navegador como el servidor acuerdan una "clave" secreta para cifrar y descifrar los datos. Esto se llama "intercambio de claves". Es como si ambos se dieran una llave para abrir el sobre cerrado.</li>
                     <li><marcador class="resaltado9">Cerrando el Acuerdo:</marcador> Luego, se confirma que ambas partes estén listas para comunicarse de manera segura. Esto completa el proceso de "handshake" y establece una conexión segura.</li>
                 </ol>
-                <div class="blog-image-zoom">
+                <div class="blog-image-grande">
                     <img src="media/https1.png" alt="">
                 </div>
                 <h2>Certificados SSL/TLS</h2>
