--- a/devops/ansible.html
+++ b/devops/ansible.html
@@ -210,7 +210,7 @@ roles/
                     <li>▱ <marcador class="resaltado3">Callback Plugins: </marcador>definen cómo se muestra la salida (por ejemplo, en JSON o en formato legible).</li>
                     <li>▱ <marcador class="resaltado3">Lookup Plugins: </marcador>permiten acceder a datos externos, como contraseñas o inventarios dinámicos.</li>
                 </ul>
-                <div class="blog-image-zoom">
+                <div class="blog-image-grande">
                     <img src="media/ansible9.png" alt="">
                 </div>
                 <h6>Ansible Vault</h6>
@@ -267,7 +267,7 @@ roles/
                     </div>
                 </div>
                 <p>Y luego los llamas desde tu playbook.</p>
-                <div class="blog-image-zoom">
+                <div class="blog-image-grande">
                     <img src="media/ansible10.png" alt="">
                 </div>
                 <h6>Nodos Gestionados (Managed Nodes)</h6>
