--- a/devops/flink.html
+++ b/devops/flink.html
@@ -577,7 +577,7 @@ PasswordAuthentication yes
                 </div>
                 <p>En esa interfaz deberías poder ver los TaskManagers conectados, el estado del JobManager y otros detalles de monitoreo.</p>
                 <p>También puedes revisar los logs en el directorio <marcador class="resaltado1">log/</marcador> para diagnosticar cualquier problema o asegurarte de que todos los nodos se hayan conectado correctamente.</p>
-                <div class="blog-image-zoom">
+                <div class="blog-image-grande">
                     <img src="media/flink7.png" alt="">
                 </div>
                 <h2>Ejemplo de Uso</h2>
@@ -1336,7 +1336,7 @@ Close - Destruyendo FraudDetector.
                         </div>
                     </section>
                 </div>
-                <div class="blog-image-zoom">
+                <div class="blog-image-grande">
                     <img src="media/flink9.png" alt="">
                 </div>
             </div>
