--- a/index2.html
+++ b/index2.html
@@ -117,9 +117,9 @@
                     <img src="images/22.png" alt="">
                 </figure3>
             </div>
-            <div class="autoBLur">LUNDEV</div>
-            <div class="autoBLur">DESIGNER</div>
             <div class="autoBLur">DEVELOPER</div>
+            <div class="autoBLur">SYS ADMIN</div>
+            <div class="autoBLur">SCIENTIFIC</div>
             <div class="autoBLur">SUBCRIBE +</div>
             <div class="autoBLur">SEE MORE &#8599;</div>
         </section>
